--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':feature'
 include ':core:network'
 include ':core:database'
 include ':core:data'
+include ':feature:list'
+include ':feature:details'
